# tugboat

./: Cargo.toml
resources/: Cargo.toml
resources/src/manifests/: mod.rs  object_meta.rs  sized.rs
resources/src/manifests/core/v1/: machine.rs  mod.rs  persistent_volume.rs  ship.rs
src/: main.rs
tugboat-runtime/: Cargo.toml
tugboat-runtime/src/: lib.rs  main.rs
tugboat-runtime/src/vm/: mod.rs
tugboat-runtime/src/vm/qemu/: error.rs  mod.rs  volume_copy.rs
